[package]
name = "ssh-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
russh = "0.49"
russh-keys = "0.49"
tokio = { version = "1", features = ["full", "io-util"] }
etherparse = "0.16"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
bincode = "1"
async-trait = "0.1"
rpassword = "7"

[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.7", features = ["async"] }
rtnetlink = "0.15"
netlink-packet-route = "0.22"
futures = "0.3"
