[package]
name = "ssh-proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
russh = { version = "0.62", features = ["async-trait"] }
tokio = { version = "1", features = ["full", "io-util"] }
etherparse = "0.21"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
async-trait = "*"
postcard = { version = "1.1.3", features = ["alloc"] }
inquire = "0.9.2"
xdg = "3.0.0"
users = "0.11.0"
zerocopy = { version = "0.8.48", features = ["std"] }
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.8.5", features = ["async"] }
rtnetlink = "0.21"
netlink-packet-route = "0.30"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
